--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.7",
     "express": "^5.0.0",
     "typescript": "^5.7.2"
   },
@@ -23,6 +24,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
