added auth middleware

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/postgres"
 CORSORIGIN=*
 PORT=8000
 ACCESSSECRET=somethinghere
+ACCESSTOKENEXPIRY=24h
