--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -3,3 +3,6 @@ CORSORIGIN=*
 PORT=8000
 ACCESSSECRET=somethinghere
 ACCESSTOKENEXPIRY=24h
+CLOUDINARYCLOUDNAME=
+CLOUDINARYAPIKEY=
+CLOUDINARYAPISECRET=
