--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "/backend/dist/index.js",
+      "src": "backend/dist/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "/frontend/package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
         "zeroConfig": true,
@@ -21,7 +21,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/"
+      "dest": "/frontend/index.html"
     }
   ]
 }
