--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node dist/index.js",
-    "build": "tsc -b",
+    "build": "pnpm exec prisma generate && tsc -b",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.2",
     "express": "^5.0.0",
     "typescript": "^5.7.2"
   },
