--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node dist/index.js",
-    "build": "pnpm exec prisma generate && tsc -b",
-    "start": "node dist/index.js"
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
