--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsc -b && node dist/index.js",
     "build": "tsc -b",
-    "start": "node dist/index.js",
+    "start": "echo 'Starting app' && node dist/index.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
