--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node dist/index.js",
-    "build": "tsc -b",
-    "start": "echo 'Starting app' && node dist/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
