--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node dist/index.js",
-    "build": "tsc",
+    "build": "tsc -b",
     "start": "node dist/index.js",
     "postinstall": "prisma generate"
   },
