--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,12 @@
     {
       "src": "package.json",
       "use": "@vercel/node"
+    },
+    {
+		"src": "dist/index.js",
+		"use": "@vercel/node"
     }
+
   ],
   "routes": [
     {
