--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,7 +6,15 @@
       "use": "@vercel/node"
     },
     {
-		"src": "dist/index.js",
+		"src": "src/index.js",
+		"use": "@vercel/node"
+    }
+    {
+		"src": "/src/index.js",
+		"use": "@vercel/node"
+    }
+    {
+		"src": "/dist/index.js",
 		"use": "@vercel/node"
     }
 
